--- a/code/dev/parts/signup/form-signup-vs-promo.tpl.html
+++ b/code/dev/parts/signup/form-signup-vs-promo.tpl.html
@@ -90,7 +90,7 @@
               <label for="firstName" class="col-sm-3 control-label">First Name *</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="firstName" name="firstName" placeholder="First Name" required ng-maxlength="150"
-                  ng-model="$ctrl.model.first_name" ng-disabled="$ctrl._loading">
+                  ng-model="$ctrl.model.first_name" ng-disabled="$ctrl._loading" ng-pattern="USER_FIRST_NAME">
                 <label for="firstName" class="text-info" popover-trigger="mouseenter" uib-popover="First name">
               <i class="fa fa-question-circle"></i>
           </label>
@@ -102,7 +102,7 @@
               <label for="lastName" class="col-sm-3 control-label">Last Name *</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="lastName" name="lastName" placeholder="Last Name" ng-model="$ctrl.model.last_name"
-                  required ng-maxlength="150" ng-disabled="$ctrl._loading">
+                  required ng-maxlength="150" ng-disabled="$ctrl._loading" ng-pattern="USER_LAST_NAME">
                 <label for="lastName" class="text-info" popover-trigger="mouseenter" uib-popover="Last name">
               <i class="fa fa-question-circle"></i>
           </label>
@@ -127,7 +127,7 @@
           Company Name &nbsp;</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="companyName" name="companyName" placeholder="Company Name" ng-maxlength="150"
-                  ng-model="$ctrl.model.company_name" ng-disabled="$ctrl._loading">
+                  ng-model="$ctrl.model.company_name" ng-disabled="$ctrl._loading" ng-pattern="COMPANY_NAME">
                 <label for="companyName" class="text-info" popover-trigger="mouseenter" uib-popover="Will be generated from your first and last name if left empty.">
           <i class="fa fa-question-circle"></i>
           </label>
@@ -140,7 +140,7 @@
               <label for="address1" class="col-sm-3 control-label">Address *</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" required id="address1" name="address1" placeholder="Address" ng-model="$ctrl.model.address1"
-                  ng-maxlength="150" ng-disabled="$ctrl._loading">
+                  ng-maxlength="150" ng-disabled="$ctrl._loading" ng-pattern="STREET_ADDRES">
                 <label for="address1" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used as a billing address later.">
           <i class="fa fa-question-circle"></i>
           </label>
@@ -152,7 +152,7 @@
               <label for="address2" class="col-sm-3 control-label">Address (Line 2) &nbsp;</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="address2" name="address2" placeholder="Address (Line 2)" ng-model="$ctrl.model.address2"
-                  ng-maxlength="150" ng-disabled="$ctrl._loading">
+                  ng-maxlength="150" ng-disabled="$ctrl._loading" ng-pattern="STREET_ADDRES">
                 <label for="address2" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used as a billing address later.">
           <i class="fa fa-question-circle"></i>
           </label>
@@ -177,7 +177,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="state" name="state" required placeholder="State" ng-model="$ctrl.model.state"
                   ng-maxlength="150" ng-disabled="$ctrl._loading">
-                <label for="state" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later.">
+                <label for="state" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later">
             <i class="fa fa-question-circle"></i>
             </label>
                 <div ng-show="!!newUser['state'].$error.maxlength" style="color:red">150 characters max</div>
@@ -189,7 +189,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="City" name="city" required placeholder="City" ng-model="$ctrl.model.city"
                   ng-maxlength="150" ng-disabled="$ctrl._loading">
-                <label for="city" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later.">
+                <label for="city" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later">
           <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['city'].$error.maxlength" style="color:red">150 characters max</div>
@@ -201,7 +201,7 @@
               <div class="col-sm-9">
                 <input type="text" ng-pattern="zipRegex" class="form-control inline-block" id="zipcode" name="zipcode" ng-maxlength="30"
                   required placeholder="Zip Code" ng-model="$ctrl.model.zipcode" ng-maxlength="30" ng-disabled="$ctrl._loading">
-                <label for="zipcode" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later.">
+                <label for="zipcode" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used in a billing address later">
             <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['zipcode'].$error.maxlength" style="color:red">30 characters max</div>
