Hide the message "Loading.."

--- a/code/dev/parts/azure-subscriptions/list-resources.html
+++ b/code/dev/parts/azure-subscriptions/list-resources.html
@@ -45,9 +45,9 @@
           </div>
         </div>
         <div class="panel-body">
-          <div class="alert alert-info" ng-if="_loading">
+          <!-- <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-          </div>
+          </div>  -->
           <div class="alert alert-danger" ng-if="!_loading && _error">
             {{_error.message}}
           </div>
