--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -48,10 +48,10 @@
           <div class="alert alert-warning" ng-if="records == null && !_loading">
             Failed to retrieve a list of resources - please try again later
           </div>
-          <div class="alert alert-info" ng-if="_loading">
+          <!-- <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
             Loading...
-          </div>
+          </div> -->
           <crud-pagination></crud-pagination>
           <div class="table-responsive">
             <table class="table users-list">
