Update " Loading..." in list pages

--- a/code/dev/parts/companies/account-resources.html
+++ b/code/dev/parts/companies/account-resources.html
@@ -53,9 +53,9 @@
               <div class="alert alert-warning" ng-if="records == null && !_loading">
                 Failed to retrieve a list of resources - please try again later
               </div>
-              <div class="alert alert-info" ng-if="_loading">
+              <!-- <div class="alert alert-info" ng-if="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
+              </div> -->
               <crud-pagination></crud-pagination>
               <table class="table table-condensed">
                 <thead>
@@ -152,9 +152,9 @@
               <div class="alert alert-warning" ng-if="records == null && !_loading">
                 Failed to retrieve a list of resources - please try again later
               </div>
-              <div class="alert alert-info" ng-if="_loading">
+              <!-- <div class="alert alert-info" ng-if="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
+              </div> -->
               <crud-pagination></crud-pagination>
               <table class="table">
                 <thead>
@@ -253,9 +253,9 @@
               <div class="alert alert-warning" ng-if="records == null && !_loading">
                 Failed to retrieve a list of resources - please try again later
               </div>
-              <div class="alert alert-info" ng-if="_loading">
+              <!-- <div class="alert alert-info" ng-if="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
+              </div> -->
               <crud-pagination></crud-pagination>
               <table class="table">
                 <thead>
@@ -338,9 +338,9 @@
               <div class="alert alert-warning" ng-if="records == null && !_loading">
                 Failed to retrieve a list of resources - please try again later
               </div>
-              <div class="alert alert-info" ng-if="_loading">
+              <!-- <div class="alert alert-info" ng-if="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
+              </div> -->
               <crud-pagination></crud-pagination>
               <table class="table ssl-names--table ">
                 <thead>
@@ -419,9 +419,9 @@
               <div class="alert alert-warning" ng-if="records == null && !_loading">
                 Failed to retrieve a list of resources - please try again later
               </div>
-              <div class="alert alert-info" ng-if="_loading">
+              <!-- <div class="alert alert-info" ng-if="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
+              </div> -->
               <crud-pagination></crud-pagination>
               <table class="table">
                 <thead>
@@ -505,9 +505,9 @@
               <div class="alert alert-warning" ng-if="records == null && !_loading">
                 Failed to retrieve a list of resources - please try again later
               </div>
-              <div class="alert alert-info" ng-if="_loading">
+              <!-- <div class="alert alert-info" ng-if="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
+              </div> -->
               <crud-pagination ng-if="records !== null"></crud-pagination>
               <table class="table">
                 <thead>
@@ -620,9 +620,9 @@
               <div class="alert alert-warning" ng-if="records == null && !_loading">
                 Failed to retrieve a list of resources - please try again later
               </div>
-              <div class="alert alert-info" ng-if="_loading">
+              <!-- <div class="alert alert-info" ng-if="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
+              </div> -->
               <crud-pagination></crud-pagination>
               <table class="table users-list">
                 <thead>
@@ -721,9 +721,9 @@
               <div class="alert alert-warning" ng-if="records == null && !_loading">
                 Failed to retrieve a list of resources - please try again later
               </div>
-              <div class="alert alert-info" ng-if="_loading">
+              <!-- <div class="alert alert-info" ng-if="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
+              </div> -->
               <crud-pagination></crud-pagination>
               <table class="table">
                 <thead>
