--- a/code/dev/parts/dns_zones/dns_zone-check-integration-page.html
+++ b/code/dev/parts/dns_zones/dns_zone-check-integration-page.html
@@ -28,7 +28,7 @@
       </div>
       <div class="panel-body">
         <div class="alert alert-info" ng-if="_loading">
-          <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
+          <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading...
         </div>
         <dns-zone-check-integration ng-if="!_loading" class="col-sm-12" zone-id="params.id" zone-config="model"></dns-zone-check-integration>
       </div>
