--- a/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
@@ -27,9 +27,9 @@
           </div>
         </div>
         <div class="panel-body">
-          <!-- <div class="alert alert-info" ng-if="vm._loading && vm.totalItems==0">
-            <i class="glyphicon glyphicon-refresh spin" ng-if="vm._loading"></i>&nbsp; Loading...
-          </div> -->
+          <div class="alert alert-info" ng-if="vm._loading && vm.totalItems==0">
+            <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading...
+          </div>
           <div class="alert alert-info" ng-if="!vm._loading && !records.length">
             No data to display
           </div>
