--- a/code/dev/parts/signup/form-signup-vs-promo.tpl.html
+++ b/code/dev/parts/signup/form-signup-vs-promo.tpl.html
@@ -140,7 +140,7 @@
               <label for="address1" class="col-sm-3 control-label">Address *</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" required id="address1" name="address1" placeholder="Address" ng-model="$ctrl.model.address1"
-                  ng-maxlength="150" ng-disabled="$ctrl._loading" ng-pattern="STREET_ADDRES">
+                  ng-maxlength="150" ng-disabled="$ctrl._loading" ng-pattern="STREET_ADDRESS">
                 <label for="address1" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used as a billing address later.">
           <i class="fa fa-question-circle"></i>
           </label>
@@ -152,7 +152,7 @@
               <label for="address2" class="col-sm-3 control-label">Address (Line 2) &nbsp;</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control inline-block" id="address2" name="address2" placeholder="Address (Line 2)" ng-model="$ctrl.model.address2"
-                  ng-maxlength="150" ng-disabled="$ctrl._loading" ng-pattern="STREET_ADDRES">
+                  ng-maxlength="150" ng-disabled="$ctrl._loading" ng-pattern="STREET_ADDRESS">
                 <label for="address2" class="text-info" popover-trigger="mouseenter" uib-popover="Could be used as a billing address later.">
           <i class="fa fa-question-circle"></i>
           </label>
