Minor help tooltip changes

--- a/code/dev/parts/domains/domain-the-third-party-links/domain-the-third-party-links.tpl.html
+++ b/code/dev/parts/domains/domain-the-third-party-links/domain-the-third-party-links.tpl.html
@@ -93,7 +93,7 @@
           {{runtime_domain}}
         </ui-select-choices>
       </ui-select>
-      <label for="thirdPartyRuntimeDomains" class="text-info" popover-trigger="mouseenter" uib-popover="Provide here a list of third-party domain names or URLs as they are mentioned in third-party Javascript codes. For example: ‘https://images-eu.ssl-images-amazon.com">
+      <label for="thirdPartyRuntimeDomains" class="text-info" popover-trigger="mouseenter" uib-popover="Provide here a list of third-party domain names or URLs as they are mentioned in third-party Javascript codes. For example: ‘https://images-eu.ssl-images-amazon.com’.">
         <i class="fa fa-question-circle"></i>
       </label>
       <div class="error-messages" ng-messages="editForm.thirdPartyRuntimeDomains.$error" role="alert" ng-messages-multiple>
