--- a/code/dev/parts/domains/domain-waf-actions-list/domain-waf-actions-list.tpl.html
+++ b/code/dev/parts/domains/domain-waf-actions-list/domain-waf-actions-list.tpl.html
@@ -11,11 +11,11 @@
       <thead>
         <tr>
           <th style="width: 50%"> Condition <label for="coLuaEnableAll" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
-              uib-popover="Conditions define per-request criteria and are based on WAF score assigned to a request. If a request meets a condition the WAF takes the action defined for the conditition.">
+              uib-popover="Conditions define per-request criteria and are based on WAF score assigned to a request. If a request meets a condition, the WAF takes the action defined for the conditition.">
           <i class="fa fa-question-circle"></i>
         </label></th>
           <th class="table-title--operation"> Action <label for="coLuaEnableAll" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
-              uib-popover="Once the WAF has flagged a request with one of the defined condition it can take one of the following actions: ALLOW (will allow the request), BLOCK (will block the request if WAF is not in Learning Mode, DROP (will block the request even if the WAF is in Learning Mode, LOG (will allow the request and log the incident)">
+              uib-popover="Once the WAF has flagged a request with one of the defined condition, it can take one of the following actions: ALLOW (will allow the request), BLOCK (will block the request if WAF is not in Learning Mode), DROP (will block the request even if the WAF is in Learning Mode), LOG (will allow the request and log the incident)">
           <i class="fa fa-question-circle"></i>
         </label></th>
           <th></th>
