Correction to the domain caching rule tooltip text

--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -30,7 +30,7 @@
     <div class="col-md-9">
       <toggle-switch id="overrideOriginCachingHeaders" ng-model="$ctrl.rule.edge_caching.override_origin" on-label="On" off-label="Off">
       </toggle-switch>
-      <label for="override_origin" class="text-info" popover-trigger="mouseenter" uib-popover="If the option is enabled then the edge cache does NOT respect caching headers set by the origin server. Otherwise, the cache will parse and follow the content caching instructions set by the origin.">
+      <label for="override_origin" class="text-info" popover-trigger="mouseenter" uib-popover="If the option is enabled then the edge cache will NOT respect caching headers set by the origin server. Otherwise, the cache will parse and follow the content caching instructions set by the origin.">
         <i class="fa fa-question-circle"></i>
       </label>
     </div>
