--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -300,7 +300,7 @@
               </div>
               <hr>
             </uib-tab>
-            <uib-tab index="1" heading="Origin Health Monitoring" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="You can manage here whether we should monitor the origin health status and what monitoring parameters to use.">
+            <uib-tab index="1" heading="Origin Health Monitoring" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="You can manage here whether we should monitor the origin health status and what monitoring parameters to use">
               <!-- BLOCK Origin Health Monitoring -->
               <div class="form-group form-inline">
                 <label for="enable_cache" class="col-sm-3 control-label">Origin Health Monitoring</label>
@@ -333,7 +333,7 @@
                     <label for="originHealthProbePROBE_TIMEOUT" class="col-sm-3 control-label">Probe Timeout</label>
                     <div class="col-md-9">
                       <input type="number" id="probe_timeout" name="originHealthProbePROBE_TIMEOUT" class="form-control inline-block" ng-disabled="_loading" ng-model="model.origin_health_probe.PROBE_TIMEOUT" ng-min="1" ng-max="60" required> second(s)
-                      <label for="originHealthProbePROBE_TIMEOUT" class="text-info" popover-trigger="mouseenter" uib-popover="Defines for how long the proxy will wait for the origin to respond on monitoring HTTP request (1-60 range).">
+                      <label for="originHealthProbePROBE_TIMEOUT" class="text-info" popover-trigger="mouseenter" uib-popover="Defines for how long the proxy will wait for the origin to respond on monitoring HTTP request (1-60 range)">
                         <i class="fa fa-question-circle"></i>
                       </label>
                       <div class="error-messages" ng-messages="editForm.originHealthProbePROBE_TIMEOUT.$error" role="alert" ng-messages-multiple>
@@ -346,7 +346,7 @@
                     <label for="originHealthProbePROBE_INTERVAL" class="col-sm-3 control-label">Probe Interval</label>
                     <div class="col-md-9">
                       <input type="number" id="origin_health_probe_PROBE_INTERVAL" name="originHealthProbePROBE_INTERVAL" class="form-control inline-block" ng-disabled="_loading" ng-model="model.origin_health_probe.PROBE_INTERVAL" ng-min="1" ng-max="1800" required> second(s)
-                      <label for="originHealthProbePROBE_INTERVAL" class="text-info" popover-trigger="mouseenter" uib-popover="Defines the interval in seconds between origin monitoring checks (1-1800 range).">
+                      <label for="originHealthProbePROBE_INTERVAL" class="text-info" popover-trigger="mouseenter" uib-popover="Defines the interval in seconds between origin monitoring checks (1-1800 range)">
                         <i class="fa fa-question-circle"></i>
                       </label>
                       <div class="error-messages" ng-messages="editForm.originHealthProbePROBE_INTERVAL.$error" role="alert" ng-messages-multiple>
@@ -359,7 +359,7 @@
                     <label for="originHealthProbeHTTP_STATUS" class="col-sm-3 control-label">Expected HTTP Response Code</label>
                     <div class="col-md-9">
                       <input type="number" id="expectedHTTPresponseCode" name="originHealthProbeHTTP_STATUS" class="form-control inline-block" ng-disabled="_loading" ng-model="model.origin_health_probe.HTTP_STATUS" ng-min="100" ng-max="599" required>
-                      <label for="originHealthProbeHTTP_STATUS" class="text-info" popover-trigger="mouseenter" uib-popover="The origin server should respond with this HTTP status code to be considered healthy (range 100-599).">
+                      <label for="originHealthProbeHTTP_STATUS" class="text-info" popover-trigger="mouseenter" uib-popover="The origin server should respond with this HTTP status code to be considered healthy (range 100-599)">
                         <i class="fa fa-question-circle"></i>
                       </label>
                       <div class="error-messages" ng-messages="editForm.originHealthProbeHTTP_STATUS.$error" role="alert" ng-messages-multiple>
