--- a/code/dev/parts/auth/forgot-password.html
+++ b/code/dev/parts/auth/forgot-password.html
@@ -5,7 +5,7 @@
   <form class="form-horizontal" name="forgotForm" ng-submit="forgot(forgotForm)" novalidate>
     <div class="form-group" ng-class="{'has-error': forgotForm.email.$invalid && forgotForm.email.$dirty}">
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="email" class="form-control" ng-model="data.email" id="email" name="email" placeholder="Enter your email here" ng-disabled="data.loading" required autofocus
+        <input type="email" class="form-control" ng-model="data.email" id="email" name="email" placeholder="Enter your email here" required autofocus
           ng-maxlength="64" ng-disabled="data.loading">
         <div class="error-messages" ng-messages="forgotForm.email.$error" role="alert" ng-messages-multiple>
           <div ng-messages-include="parts/shared/error-messages.html"></div>
