--- a/code/dev/parts/dns_zone_records/list.html
+++ b/code/dev/parts/dns_zone_records/list.html
@@ -78,7 +78,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg"></img>
+        <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg" alt="NS1 Logo">
         Records For Zone <strong ng-show="zone_name">{{zone_name}}</strong>
       </h2>
     </div>
