--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -69,7 +69,7 @@
             <label for="comment" class="col-sm-2 control-label">Comment</label>
             <div class="col-sm-10">
               <div class="col-sm-12 form-group">
-                <textarea id="comment" placeholder="Comment (max 300 symbol)" ng-maxlength="300" class="form-control inline-block" id="comment" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
+                <textarea placeholder="Comment (max 300 symbol)" ng-maxlength="300" class="form-control inline-block" id="comment" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
                 </textarea>
                 <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Comment TODO REVIEW TEXT">
                   <i class="fa fa-question-circle"></i>
