--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -153,7 +153,7 @@
             <i class="sub-menu-icon fa fa-upload"></i> Data Sources <i class="fa fa-hourglass-half comming-soon" aria-hidden="true" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Coming Soon "></i>
           </a>
           <a ui-sref-active="active" ui-sref="index.dnsServices.dns_analytics" class="side-menu-sub-item">
-            <i class="sub-menu-icon fa fa-line-chart"></i> DNS Analytics </i>
+            <i class="sub-menu-icon fa fa-line-chart"></i> DNS Analytics
           </a>
         </li>
         <li ui-sref-active-if="{class: 'open-side-menu-item', state: 'index.accountSettings'}" ng-class="{'open-side-menu-item': menuExpanded('index.accountSettings'), 'active-side-menu-item': $state.includes('index.accountSettings')}">
